# learn_cmake

config-file/: CMakeLists.txt  build.sh
config-file/cmake/: build.cmake  build.h.in  config.cmake  config.h.in
curl/: CMakeLists.txt
curl/src/: CMakeLists.txt  main.c
hello-module/: CMakeLists.txt
hello-module/cmake/: FindHELLO.cmake
hello-module/src/: CMakeLists.txt  main.c
hello-world-lib/: CMakeLists.txt
hello-world-lib/src/: CMakeLists.txt  hello.c
hello-world-shared/: CMakeLists.txt
hello-world-shared/src/: CMakeLists.txt  main.c
hello_world/: CMakeLists.txt
hello_world_clear/: CMakeLists.txt
hello_world_clear/src/: CMakeLists.txt
